# BTGenBot_Nav4Rails

./: .gitignore  .gitmodules
dataset/: btgenbot_alpaca.jsonl  btgenbot_chat.jsonl  categories.csv  categories_report.md  invalid_xml_examples.csv  invalid_xml_report.md  jsonl_export_report.md  key_figures.csv  key_figures.md  prompts.json  recovery_patterns.csv  recovery_patterns_report.md  smoke_test_report.md  tokens_distribution.csv  tokens_report.md
docs/: baseline_evaluation.md
graph_rag/: .env.example  .gitignore  README.md  pyproject.toml
graph_rag/docs/: architecture.md
graph_rag/src/nav4rail_graph_rag/: __init__.py  catalog.py  cli.py  config.py
graph_rag/src/nav4rail_graph_rag/domain/: __init__.py  models.py
graph_rag/src/nav4rail_graph_rag/evaluation/: __init__.py  metrics.py  runner.py
graph_rag/src/nav4rail_graph_rag/generation/: __init__.py  llm.py  xml_renderer.py
graph_rag/src/nav4rail_graph_rag/indexing/: __init__.py  graph_store.py  lexical.py
graph_rag/src/nav4rail_graph_rag/ingestion/: __init__.py  dataset.py  xml_parser.py
graph_rag/src/nav4rail_graph_rag/observability/: __init__.py  logging.py  wandb.py
graph_rag/src/nav4rail_graph_rag/orchestration/: __init__.py  pipeline.py
graph_rag/src/nav4rail_graph_rag/retrieval/: __init__.py  hybrid.py
graph_rag/src/nav4rail_graph_rag/validation/: __init__.py  validator.py
graph_rag/tests/: test_evaluation.py  test_generation_validation.py  test_ingestion.py  test_online_llm.py  test_pipeline.py  test_retrieval.py
notebooks/: eda_BT_Anne.ipynb  eda_BT_Mohamed.ipynb  (+5 more)
(+15 files in other folders)
